--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>590</width>
-    <height>472</height>
+    <width>816</width>
+    <height>473</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <widget class="QPushButton" name="pbtSalir">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>480</x>
       <y>440</y>
       <width>91</width>
       <height>23</height>
@@ -313,12 +313,49 @@
      </layout>
     </widget>
    </widget>
-   <zorder>pbtSalir</zorder>
-   <zorder>layoutWidget_4</zorder>
-   <zorder>grbJugador</zorder>
-   <zorder>grbMesa</zorder>
-   <zorder>pbtPaso</zorder>
   </widget>
+  <widget class="QDockWidget" name="dckJugadas">
+   <property name="minimumSize">
+    <size>
+     <width>240</width>
+     <height>157</height>
+    </size>
+   </property>
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
+   </property>
+   <property name="windowTitle">
+    <string>Jugadas</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents">
+    <widget class="QListWidget" name="lsvJugadas">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>0</y>
+       <width>220</width>
+       <height>440</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
+  </widget>
+  <action name="action_Ayuda">
+   <property name="text">
+    <string>&amp;Ayuda</string>
+   </property>
+  </action>
+  <action name="action_Acerca_de">
+   <property name="text">
+    <string>&amp;Acerca de...</string>
+   </property>
+  </action>
  </widget>
  <tabstops>
   <tabstop>pbtPaso</tabstop>
