Las jugadas ya no son editables

--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -343,6 +343,12 @@
        <height>440</height>
       </rect>
      </property>
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="isWrapping" stdset="0">
+      <bool>false</bool>
+     </property>
     </widget>
    </widget>
   </widget>
