--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -343,8 +343,17 @@
        <height>440</height>
       </rect>
      </property>
+     <property name="autoScroll">
+      <bool>true</bool>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="showDropIndicator" stdset="0">
+      <bool>false</bool>
+     </property>
+     <property name="movement">
+      <enum>QListView::Static</enum>
      </property>
      <property name="isWrapping" stdset="0">
       <bool>false</bool>
