--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -37,65 +37,13 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>380</y>
+      <y>390</y>
       <width>230</width>
-      <height>41</height>
+      <height>46</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_4">
-     <item>
-      <widget class="QPushButton" name="pbtFuerza5">
-       <property name="toolTip">
-        <string>Muy Fuerte (A)</string>
-       </property>
-       <property name="text">
-        <string>MF</string>
-       </property>
-       <property name="shortcut">
-        <string>A</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pbtFuerza4">
-       <property name="toolTip">
-        <string>Fuerte (S)</string>
-       </property>
-       <property name="text">
-        <string>F</string>
-       </property>
-       <property name="shortcut">
-        <string>S</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pbtFuerza3">
-       <property name="toolTip">
-        <string>Media (D)</string>
-       </property>
-       <property name="text">
-        <string>M</string>
-       </property>
-       <property name="shortcut">
-        <string>D</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pbtFuerza2">
-       <property name="toolTip">
-        <string>Débil (F)</string>
-       </property>
-       <property name="text">
-        <string>D</string>
-       </property>
-       <property name="shortcut">
-        <string>F</string>
-       </property>
-      </widget>
-     </item>
-     <item>
+    <layout class="QGridLayout" name="gridFuerzas">
+     <item row="0" column="4">
       <widget class="QPushButton" name="pbtFuerza1">
        <property name="toolTip">
         <string>Nada (G)</string>
@@ -108,13 +56,145 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="2">
+      <widget class="QPushButton" name="pbtFuerza3">
+       <property name="toolTip">
+        <string>Mano Media (D)</string>
+       </property>
+       <property name="text">
+        <string>MM</string>
+       </property>
+       <property name="shortcut">
+        <string>D</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="pbtFuerza4">
+       <property name="toolTip">
+        <string>Mano Fuerte (S)</string>
+       </property>
+       <property name="text">
+        <string>MF</string>
+       </property>
+       <property name="shortcut">
+        <string>S</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QPushButton" name="pbtFuerza5">
+       <property name="toolTip">
+        <string>Mano Muy Fuerte (A)</string>
+       </property>
+       <property name="text">
+        <string>MMF</string>
+       </property>
+       <property name="shortcut">
+        <string>A</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QPushButton" name="pbtFuerza2">
+       <property name="toolTip">
+        <string>Mano Débil (F)</string>
+       </property>
+       <property name="text">
+        <string>MD</string>
+       </property>
+       <property name="shortcut">
+        <string>F</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLabel" name="lblFuerzaRiver_2">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>5</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #70bde7; border: 1px solid black;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="lblFuerzaFlop_2">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>5</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #001d5a; border: 1px solid black;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLabel" name="lblFuerzaTurn_2">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>5</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #0971b8; border: 1px solid black;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QLabel" name="lblFuerzaTurn_3">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>5</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #cfefff; border: 1px solid black;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="4">
+      <widget class="QLabel" name="lblFuerzaTurn_4">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>5</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background: #fff; border: 1px solid black;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QGroupBox" name="grbJugador">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>200</y>
+      <y>210</y>
       <width>570</width>
       <height>180</height>
      </rect>
@@ -205,7 +285,7 @@
       <x>10</x>
       <y>10</y>
       <width>571</width>
-      <height>181</height>
+      <height>200</height>
      </rect>
     </property>
     <property name="title">
@@ -370,24 +450,78 @@
       </item>
      </layout>
     </widget>
+    <widget class="QLabel" name="lblFuerzaFlop">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>180</y>
+       <width>320</width>
+       <height>10</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: #001d5a; border: 1px solid black;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lblFuerzaTurn">
+     <property name="geometry">
+      <rect>
+       <x>350</x>
+       <y>180</y>
+       <width>90</width>
+       <height>10</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: #0971b8; border: 1px solid black;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lblFuerzaRiver">
+     <property name="geometry">
+      <rect>
+       <x>460</x>
+       <y>180</y>
+       <width>90</width>
+       <height>10</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: #70bde7; border: 1px solid black;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
    <widget class="QPushButton" name="pbtPaso">
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>430</y>
+      <y>440</y>
       <width>156</width>
       <height>27</height>
      </rect>
     </property>
     <property name="toolTip">
-     <string>Siguiente mano (Espacio)</string>
+     <string>Siguiente mano (J)</string>
     </property>
     <property name="text">
      <string>FLOP</string>
     </property>
     <property name="shortcut">
-     <string>Space</string>
+     <string>J</string>
     </property>
    </widget>
   </widget>
